# rmux

./: .cirrus.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  tox.yml
docs/: Makefile  movie.applescript  movie.cast
rmux/: __init__.py
rmux/tests/: test_rmux.py
src/rmux/: __init__.py  __main__.py
src/rmux/tests/: test_rmux.py
