[metadata]
name = rmux
description = remux allows you to run your local project on multiple remote machines in parallel
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
home_page = https://github.com/pycontribs/rmux/
classifiers =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing
license = Apache
license-files = LICENSE
requires-external =
    tmux
    xpanes
project-url =
    Bug Tracker, https://github.com/pycontribs/rmux/issues
platform = any

[options.entry_points]
console_scripts =
  ansible-lint = rmux.__main__:main

[files]
packages =
    rmux
